create add new calculation page and integrate angular svg icon

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,226 +19,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto gap-5">
           <li class="nav-item active d-flex align-items-center">
-            <svg
-              width="22"
-              height="22"
-              viewBox="0 0 22 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M9.16667 20.1666H12.8333C17.4167 20.1666 19.25 18.3333 19.25 13.7499V8.24992C19.25 3.66659 17.4167 1.83325 12.8333 1.83325H9.16667C4.58333 1.83325 2.75 3.66659 2.75 8.24992V13.7499C2.75 18.3333 4.58333 20.1666 9.16667 20.1666Z"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M15.125 6.94824V7.86491C15.125 8.61658 14.5108 9.23991 13.75 9.23991H8.25C7.49833 9.23991 6.875 8.62574 6.875 7.86491V6.94824C6.875 6.19658 7.48917 5.57324 8.25 5.57324H13.75C14.5108 5.57324 15.125 6.18741 15.125 6.94824Z"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M7.45811 12.8333H7.4687"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M10.9957 12.8333H11.0063"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M14.5333 12.8333H14.5439"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M7.45811 16.0416H7.4687"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M10.9957 16.0416H11.0063"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M14.5333 16.0416H14.5439"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-
+            <svg-icon src="assets/icons/calculator.svg"></svg-icon>
             <a class="nav-link" routerLink="/">Calculation</a>
           </li>
           <li class="nav-item d-flex align-items-center">
-            <svg
-              width="22"
-              height="22"
-              viewBox="0 0 22 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M10.0835 17.875H19.2502Z" fill="#7A7A7A" />
-              <path
-                d="M10.0835 17.875H19.2502"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path d="M10.0835 11.4583H19.2502Z" fill="#7A7A7A" />
-              <path
-                d="M10.0835 11.4583H19.2502"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path d="M10.0835 5.04175H19.2502Z" fill="#7A7A7A" />
-              <path
-                d="M10.0835 5.04175H19.2502"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M2.75 5.04159L3.66667 5.95825L6.41667 3.20825"
-                fill="#7A7A7A"
-              />
-              <path
-                d="M2.75 5.04159L3.66667 5.95825L6.41667 3.20825"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M2.75 11.4583L3.66667 12.375L6.41667 9.625"
-                fill="#7A7A7A"
-              />
-              <path
-                d="M2.75 11.4583L3.66667 12.375L6.41667 9.625"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M2.75 17.8751L3.66667 18.7917L6.41667 16.0417"
-                fill="#7A7A7A"
-              />
-              <path
-                d="M2.75 17.8751L3.66667 18.7917L6.41667 16.0417"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-
+            <svg-icon src="assets/icons/task.svg"></svg-icon>
             <a class="nav-link" routerLink="/">Queue</a>
           </li>
           <li class="nav-item d-flex align-items-center">
-            <svg
-              width="22"
-              height="22"
-              viewBox="0 0 22 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M7.3335 1.83325V4.58325"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M14.6665 1.83325V4.58325"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M3.2085 8.33252H18.7918"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M19.25 7.79159V15.5833C19.25 18.3333 17.875 20.1666 14.6667 20.1666H7.33333C4.125 20.1666 2.75 18.3333 2.75 15.5833V7.79159C2.75 5.04159 4.125 3.20825 7.33333 3.20825H14.6667C17.875 3.20825 19.25 5.04159 19.25 7.79159Z"
-                stroke="#7A7A7A"
-                stroke-width="1.5"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M14.3869 12.5584H14.3951"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M14.3869 15.3084H14.3951"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M10.9958 12.5584H11.004"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M10.9958 15.3084H11.004"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M7.6032 12.5584H7.61143"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M7.6032 15.3084H7.61143"
-                stroke="#7A7A7A"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-
+            <svg-icon src="assets/icons/calendar.svg"></svg-icon>
             <a class="nav-link" routerLink="/">Planning</a>
           </li>
         </ul>
@@ -257,11 +46,11 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li class="d-flex px-4 py-2">
-                <img src="assets/icons/user.svg" alt="icon" />
+                <svg-icon src="assets/icons/user.svg"></svg-icon>
                 <a class="dropdown-item" href="#">Profile</a>
               </li>
               <li class="d-flex px-4 py-2">
-                <img src="assets/icons/setting.svg" alt="icon" />
+                <svg-icon src="assets/icons/setting.svg"></svg-icon>
                 <a class="dropdown-item" href="#">Setting</a>
               </li>
             </ul>
