--- a/src/app/pages/add-calculation/add-calculation.component.scss
+++ b/src/app/pages/add-calculation/add-calculation.component.scss
@@ -1,31 +1,119 @@
-.new-calculation {
-  .form-control {
-    border-radius: 4px;
-    &::placeholder {
-      font-size: 16px;
+.add-new-calculation {
+  box-shadow: 0px 2px 60px rgba(31, 31, 31, 0.02);
+  border-radius: 12px;
+  background-color: #fff;
+  margin: 30px;
+  padding: 15px 30px;
+
+  .new-calculation-wrapper {
+    .pageHeader {
+      h4 {
+        color: var(--clr-title-color);
+      }
+      p {
+        color: var(--clr-filter-text-color);
+      }
     }
-    &:focus {
-      border: 1.5px solid #f03b45 !important;
+    hr {
+      opacity: 1;
+      background-color: #e8e8e8;
+      margin-bottom: 30px;
     }
+  }
+
+  .new-calculation {
+    label {
+      color: var(--clr-text-color);
+    }
+    .form-control {
+      border-radius: 4px;
+      &::placeholder {
+        font-size: 16px;
+      }
+      &:focus {
+        border: 1.5px solid #f03b45 !important;
+      }
+    }
+  }
+
+  /* css for tooltip-wrap  */
+.tooltip-wrap {
+  cursor: pointer;
+  .tooltips-content {
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.3s linear;
+      .tooltips {
+          width: 200px;
+          &.bottom-0 {
+              bottom: -80px !important;
+          }
+      }
+      &::after {
+          position: absolute;
+          right: 18px;
+          top: 4px;
+          clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+          background-color: rgb(33, 37, 41);
+          width: 30px;
+          height: 14px;
+          content: "";
+      }
+  }
+  &:hover {
+      .tooltips-content {
+          visibility: visible;
+          opacity: 1;
+      }
+  }
+}
+/* css for tooltip-wrap -END */
+
+/* css for cCard-body-item  */
+.cCard-body-item {
+  width: 45%;
+  .SwitchChecked {
+      .form-check-input {
+          float: initial;
+          width: 60px;
+          height: 30px;
+          &:focus{
+              box-shadow: none;
+          }
+      }
+  }
+}
+.cCard-body-item.w-30 {
+  width: 29%;
+}
+
+/* css for cCard-body-item -END */
+
+/* css for not */
+.not {
+  .datepicker {
+      background-size: 30px;
+      &::placeholder {
+          font-size: 20px;
+          color: var(--clr-dark);
+      }
   }
 }
 
+/* css for not -END */
 
+}
 
 ::ng-deep .accordion-item {
-    background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.125) !important;
-    margin-bottom: 20px;
-    border-radius: 5px !important;
-    overflow: hidden;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.125) !important;
+  margin-bottom: 20px;
+  border-radius: 5px !important;
+  overflow: hidden;
 
-    // .accordion-button{
-    // border: 1px solid rgba(0, 0, 0, 0.125);
-    // overflow: hidden;
+  // .accordion-button{
+  // border: 1px solid rgba(0, 0, 0, 0.125);
+  // overflow: hidden;
 
-    // }
-  }
-
-
-
-
+  // }
+}
