--- a/src/app/pages/calculations/calculations.component.scss
+++ b/src/app/pages/calculations/calculations.component.scss
@@ -29,7 +29,7 @@
 
   .card-area {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill,minmax(297px,1fr));
     gap: 24px;
     .add-new {
       display: flex;
@@ -54,11 +54,11 @@
       transition: 0.3s all;
       cursor: pointer;
       border: 1px solid transparent;
-        box-shadow: 0px 6px 0px transparent;
-        border-radius: 8px;
+      box-shadow: 0px 6px 0px transparent;
+      border-radius: 8px;
 
       &:hover {
-        border-color:  #a878ff;
+        border-color: #a878ff;
         box-shadow: 0px 6px 0px #a878ff;
       }
 
@@ -100,3 +100,106 @@
     }
   }
 }
+
+// Side Bar SCSS
+
+#navigation-sidebar {
+  height: 100%;
+  z-index: 100;
+
+  // overflow-x: hidden;
+  box-shadow: 0px 2px 60px rgba(31, 31, 31, 0.02);
+  border-radius: 16px;
+  position: absolute;
+  top: 110px;
+  left: 30px;
+  height: 90vh;
+  overflow-y: auto;
+
+  .navigation-header {
+    h5 {
+      color: var(--clr-title-color);
+    }
+  }
+  .navigation-widget {
+    .navbar-nav {
+      .nav-item {
+        .nav-link.dropdown-toggle {
+          border-bottom: 2px solid #e8e8e8;
+          color: var(--clr-title-color);
+          &:hover,
+          &:focus {
+            color: var(--clr-purple);
+          }
+          &::after {
+            border: 0;
+            background-image: url(../../../assets/images/arrow-down.svg);
+            background-repeat: no-repeat;
+            background-position: top right;
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            right: 0;
+            top: 13px;
+            transition: all 0.3s linear;
+          }
+          &.show {
+            &::after {
+              transform: rotate(180deg);
+            }
+          }
+        }
+
+        ::ng-deep {
+          .dropdown-content {
+            .ng5-slider {
+              .ng5-slider-selection {
+                background: var(--clr-light-purple);
+              }
+              .ng5-slider-pointer {
+                width: 20px;
+                height: 20px;
+                top: -7px;
+                background-color: var(--clr-light-purple);
+                &::after {
+                  width: 14px;
+                  height: 14px;
+                  top: 3px;
+                  left: 3px;
+                  border-radius: 50px;
+                }
+              }
+
+              .ng5-slider-bar {
+                height: 8px;
+                border-radius: 8px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.home{
+   padding-left: 357px;
+   transition: 0.5s ease;
+}
+
+.home-collapse{
+  padding-left: 123px;
+  transition: 0.5s ease;
+}
+
+.side-bar-open{
+  width: 327px;
+  transition: 0.5s ease;
+}
+
+.sidebar-collapse{
+  width: 93px;
+  transition: 0.5s ease;
+}
+
+
