--- a/src/app/components/range-date-picker/range-date-picker.component.html
+++ b/src/app/components/range-date-picker/range-date-picker.component.html
@@ -1,4 +1,4 @@
-<form class="row row-cols-sm-auto">
+<form class="row row-cols-sm-auto side-bar-date-picker">
   <div class="col-12">
     <div class="dp-hidden position-absolute">
       <div class="input-group">
@@ -34,7 +34,7 @@
       <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
     </div>
   </div>
-  <h4>to</h4>
+  <h5 class="fw-bold lh-lg">to</h5>
   <div class="col-12">
     <div class="input-group">
       <input #dpToDate
