--- a/src/app/pages/add-calculation/add-calculation.component.scss
+++ b/src/app/pages/add-calculation/add-calculation.component.scss
@@ -13,6 +13,13 @@
       p {
         color: var(--clr-filter-text-color);
       }
+
+      .run-btn{
+          border: none;
+          outline: none;
+          box-shadow: none;
+          background-color: transparent;
+      }
     }
     hr {
       opacity: 1;
@@ -110,4 +117,10 @@
   margin-bottom: 20px;
   border-radius: 5px !important;
   overflow: hidden;
+}
+
+
+::ng-deep .accordion-button{
+  font-size: 20px;
+  font-weight: 500;
 }
